<resources>
    <string name="app_name">PertemuanUTS</string>
    <string name="register_listening">Register for Listening</string>
    <string name="login_listening">Login to Start Listening</string>
    <string name="welcome">Welcome to YouSong</string>
    <string name="welcomeLogin">Login to YouSong</string>
    <string name="fulfill_regis">Complete the Registration Form</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Register Or Login with</string>
    <string name="register">Register</string>
    <string name="or_register_with">or register with</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="yousong">YouSong</string>
    <string name="listen_again">Listen Again</string>
    <string name="recommended_music">Recommended Music</string>
    <string name="sign_in_with_google">Google</string>
    <string name="default_web_client_id">182094588134-1dr36suenl46ppg49r34u53lq1f18vmm.apps.googleusercontent.com</string>
    <string name="judul" />
    <string name="deskripsi" />
    <string name="masukan_judul">Masukan Judul Musik</string>
    <string name="masukan_deskripsi">Masukan Deskripsi Musik</string>
    <string name="thumbnail_music">Pilih Thumbnail Musik</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="simpan">Simpan</string>
    <string name="music_title">Judul Musik</string>
    <string name="music_description">Deskripsi Musik</string>
    <string name="daftar_musik">Daftar Musik</string>
    <string name="preview_thumbnail">Preview Thumbnail</string>
    <string name="add_music_menu">Tambahkan Musik</string>
    <string name="kosong" />
    <string name="edit">Edit Informasi Musik</string>
    <string name="delete">Delete</string>
</resources>